<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient_background"
    tools:context=".activities.SplashActivity">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginBottom="@dimen/spacing_large"
        android:contentDescription="@string/cd_app_logo"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- App Name -->
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_headline"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xxlarge"
        android:alpha="0.9"
        android:fontFamily="sans-serif-light"
        android:text="Secure &amp; Simple"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <!-- Loading Progress -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Loading Text -->
    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xxlarge"
        android:alpha="0.8"
        android:fontFamily="sans-serif-light"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Version Info (Optional) -->
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:alpha="0.6"
        android:fontFamily="sans-serif-light"
        android:text="Version 1.0"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>